# wagtail-hotwire

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
frontend/webpack/: webpack.common.js
wagtailhot/: wsgi.py
wagtailhot/settings/: base.py  dev.py
wagtailhot/templates/: base.html
wagtailhot/users/: apps.py  models.py
wagtailhot/users/migrations/: 0001_initial.py
