[tool.poetry]
name = "wagtail hotwire"
version = "0.0.1"
description = "Try to make a mobile app with wagtail"
authors = ["Osynia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wagtail = ">=6.3,<6.4"
django = ">=5.1,<5.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
pytest-django = "^4.9.0"
flake8 = "^7.1.1"
python-webpack-boilerplate = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
